# record_mp3_plus

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt
example/: .flutter-plugins-dependencies  README.md  pubspec.yaml
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/libs/: com.czt.mp3recorder_library_1.0.4.aar
example/ios/: .gitignore  Podfile
example/ios/Flutter/: flutter_export_environment.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: record_mp3.podspec  record_mp3_plus.podspec
ios/Classes/: SwiftRecordMp3Plugin.swift
ios/Classes/Recorder/: Recorder.m
lib/: record_mp3_plus.dart
macos/: record_mp3.podspec  record_mp3_plus.podspec
macos/Classes/: RecordMp3Plugin.h  RecordMp3Plugin.m  SwiftRecordMp3Plugin.swift
macos/Classes/Recorder/: Mp3EncodeOperation.h  Mp3EncodeOperation.m  Mp3RecordingClient.h  Mp3RecordingClient.m  Recorder.h  Recorder.m
(+14 files in other folders)
